update sse server and implement stats